fixed code block alignment

--- a/res/wrap/wrap.css
+++ b/res/wrap/wrap.css
@@ -387,7 +387,8 @@ p.lbox {
 }
 
 div.highlighter-rouge {
-  margin-left: 40px;
+  margin-left: 30px;
+  margin-right: 50px;
 }
 
 table.bom {
